tests/cases/errors/sema/call_non_function.hc
//@ error: called value is not a function
U0 Main()
{
  I64 x = 5;
  x();
}
